no encryption in password & Enable Campus wifi

--- a/libs/configuration_app/templates/manual_ssid_entry.html
+++ b/libs/configuration_app/templates/manual_ssid_entry.html
@@ -10,8 +10,11 @@
         <li><label for="ssid">Enter your network SSID:</label></li>
         <li><input type="text" name="ssid", class="wifiNetworkInputs"></li>
 
+        <li><label for="username">Enter your username:</label></li>
+        <li><input type="text" name="username", class="wifiNetworkInputs"></li>
+
         <li><label for="wifi_key">Your Wifi password</label></li>
-        <li><input type="password" name="wifi_key", class="wifiNetworkInputs"></li>
+        <li><input type="text" name="wifi_key", class="wifiNetworkInputs"></li>
 
         <input type="submit", class="wifiConnectButton">
       </ul>
