--- a/libs/configuration_app/templates/layout.html
+++ b/libs/configuration_app/templates/layout.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheets/app.css') }}">
     <title>RaspiWiFi Setup</title>
   </head>
+  <script>
+    function enable_text(status)
+    {
+    //alert(status);
+      status=!status;	
+      document.f1.username.disabled = status;
+    }
+  </script>
   <body>
     {% block body %}
     {% endblock %}
