--- a/libs/configuration_app/templates/manual_ssid_entry.html
+++ b/libs/configuration_app/templates/manual_ssid_entry.html
@@ -5,13 +5,19 @@
     <h1>WiFi Setup</h1>
     <div class="wifiIcon"></div>
 
-    <form action="{{ url_for('save_credentials') }}" method=post>
+    <form name=f1 action="{{ url_for('save_credentials') }}" method=post>
       <ul>
+  
         <li><label for="ssid">Enter your network SSID:</label></li>
         <li><input type="text" name="ssid", class="wifiNetworkInputs"></li>
 
-        <li><label for="username">Enter your username:</label></li>
-        <li><input type="text" name="username", class="wifiNetworkInputs"></li>
+        <li><input type="checkbox" name="UsernameCheck" value="1" onclick="enable_text(this.checked)" >Username<li>
+        <li><input type=text name="username", class="wifiNetworkInputs" disabled><li>
+          <!-- <input  type ="checkbox"  onpropertychange ="test.disabled=!this.checked" >
+          <input  type ="text"  name ="test"  disabled > -->
+        <!-- <input type="checkbox" name=others onclick="enable_text(this.checked)" >Others
+        <input type=text name=other_text> -->
+
 
         <li><label for="wifi_key">Your Wifi password</label></li>
         <li><input type="text" name="wifi_key", class="wifiNetworkInputs"></li>
